Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44142

MinGW GCC Version not recorded in qconfig.pri

    XMLWordPrintable

Details

    • b814d05101bbc35354388d5e46bd13df9e4a663e

    Description

      The gcc version is not written to qconfig.pri. This breaks certain build configuration features that check the version using QT_GCC_MAJOR_VERSION et al, for example CONFIG = c+14 does not work with our enterprise binaries, even though we ship gcc 4.9.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ericlemanissier Eric Lemanissier
            louai Louai Al-Khanji
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes